tests/stage2/t3_diagnostics/type_errors/unresolved_method_typo.fuse
// EXPECTED ERROR:
// no method `lenn` on type `List<Int>`

@entrypoint
fn main() {
  val xs: List<Int> = [1, 2, 3]
  println(xs.lenn())
}
